--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^5.7.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -22,18 +22,19 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
-    "mongodb": "^6.8.1",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
-    "next": "^14.2.13",
+    "next": "^14.2.15",
     "next-cloudinary": "^6.14.1",
     "qs": "^6.13.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "stripe": "^17.2.0",
-    "svix": "^1.35.0",
-    "tailwind-merge": "^2.5.2",
+    "svix": "^1.37.0",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "xlink-jssdk": "^7.0.2-3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
